2009-05-14 Nicolas Roard <nicolas@roard.com>
	Add a "Properties" category in the browser

2009-05-14 Nicolas Roard <nicolas@roard.com>
	Fix saving and loading of class methods

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add IDE.[hm] forgotten before :)

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add support for class/instance methods in Controller
	* Modified the Browser.gorm to deal with the class/instance switch
	* Added a switch method in Controller
	* Modified ModelClass to output class methods correctly

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add support for class methods and categories in ModelClass

2009-05-13 Nicolas Roard <nicolas@roard.com>
	Add an IDE class and refactor Controller to use it

2009-05-12 Nicolas Roard <nicolas@roard.com>
        Add some comments in the Controller
	Small modif in the gorm file to better center

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Fix some saving issues -- you can now edit and save files.
	* Use a pretty-printed AST for the output file, but build
	  the AST from the ModelClass -representation
	* Fixed some compilation warnings
	* Added a mainWindow outlet
	* Switched to 12pt default size font

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Fix a representation issue with return values (double dots).

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Allow loading of files using NSOpenPanel...

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Add NSSavePanel call to export a file containing all the classes.

2009-01-31 Nicolas Roard <nicolas@roard.com>
	Use the AST to write the exported file.
	* Fix PrettyPrintCategories when pretty-printing the class directly
	* Add an ASTReplace class to easily replace AST nodes...

2009-01-29 Nicolas Roard <nicolas@roard.com>
	Store the AST in ModelClass and ModelMethod.

2009-01-24 Nicolas Roard <nicolas@roard.com>
	Use pretty print in the text editor while editing...
	* build an AST from the text
	* call the pretty-printer on the AST